# AI-security-test

./: .env.example  .gitignore  AcmeSMBSupport7B.Modelfile  Architecture.md  BUNDLE_START_HERE.md  Branch_tasks.md  Cargo.toml  Executive_summary.md  LICENSE  README.md  Release_notes.md  Result_of_sprint.md  Roadmap_weekend.md  TZ.md  Test_instruction.md  prompts.md  refactoring.md  Спецификация для технической задачи LLM..md
.claude/: settings.local.json
development/: README.md  STATUS.md
docs/: Chain_Payload_Format.md  HTTP_Target_Mode.md  Ollama_Demo_Generator.md  Ollama_Demo_Setup.md  README.md  Rules.md  Scenario_Schema_v2.md  Sensitive_Data_Exposure_Spec.md
payloads/context_manipulation/: context.toml
payloads/extraction/: system_prompt.toml
payloads/goal_hijacking/: goal_redirect.toml
payloads/jailbreaking/: dan.toml  encoded.toml  hypothetical.toml  roleplay.toml
payloads/many_shot/: many_shot.toml
payloads/prompt_injection/: 00_multi_turn.toml  direct.toml
payloads/sensitive_data_exposure/: exposure.toml
payloads/token_attacks/: unicode.toml
src/: main.rs
src/app/: interactive.rs  mod.rs  providers.rs  runtime.rs  scenarios.rs  target.rs
src/attacks/: classic.rs  context_manipulation.rs  extraction.rs  goal_hijacking.rs  jailbreaking.rs  many_shot.rs  mod.rs  prompt_injection.rs  registry.rs  sensitive_data_exposure.rs  token_attacks.rs
src/cli/: args.rs  display.rs  menu.rs  mod.rs
src/config/: mod.rs
src/education/: mod.rs
src/engine/: damage.rs  evaluator.rs  mod.rs  runner.rs  session.rs
src/generator/: mod.rs
src/payloads/: loader.rs  mod.rs  template.rs
src/providers/: anthropic.rs  deepseek.rs  http_target.rs  mod.rs  ollama.rs  openai.rs  (+3 more)
(+50 files in other folders)
